# pursuit-curve

./: .gitignore  Makefile  README.md  TODO.md  dokumentacja.tex  main.ipynb  pyproject.toml
pursuit_curve/common/: __init__.py  continuous_simulation.py  types.py
pursuit_curve/continuous/: README.md  __init__.py  animation.py  simulation.py  strategies.py  types.py
pursuit_curve/d2/continuous/: __init__.py  animation.py  cyclic_pursuit_animation.py  strategies.py
pursuit_curve/d2/discrete/: __init__.py  animation.py  simulation.py  strategies.py  types.py
pursuit_curve/d3/continuous/: __init__.py  animation.py  strategies.py
pursuit_curve/discrete/: README.md  __init__.py  animation.py  simulation.py  strategies.py  types.py
pursuit_curve/dn/continuous/: __init__.py  strategies.py
pursuit_curve/examples/: 3d_continuous_example.py  continuous_example.py  cyclic_pursuit_example.py  discrete_example.py  nd_continuous_example.py  sphere_example.py  torus_example.py
pursuit_curve/sphere/: utils.py
pursuit_curve/sphere/continuous/: __init__.py  animation.py  strategies.py
pursuit_curve/torus/continuous/: __init__.py  animation.py  strategies.py
