[project]
name = "pursuit-curve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
]

[tool.ruff]
  line-length = 120
  # pyflakes, pycodestyle, isort
  lint.select = ["F", "E", "W", "I001"]